objects/CN_Brand__c.object
<CustomObject>
    <fields>
        <fullName>CN_Brand_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_City_API__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Group_Code_Name__c</fullName>
        <label>Group Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Group_Code__c</fullName>
        <formula>CN_Group__r.CN_Group_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The group you choose must have group code.</errorMessage>
            <filterItems>
                <field>CN_Group__c.CN_Group_Code__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CN_Group__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Is_Activated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Active__c</fullName>
        <formula>ISPICKVAL( CN_Sync_Status__c , &quot;Success&quot;) &amp;&amp;  CN_Is_Activated__c</formula>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Error_Message__c</fullName>
        <label>Sync Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sync_Time__c</fullName>
        <label>Sync Time</label>
        <type>DateTime</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Brand_Code__c</columns>
        <columns>CN_Group__c</columns>
        <columns>CN_Group_Code__c</columns>
        <columns>CN_Is_Activated__c</columns>
        <columns>CN_Sync_Status__c</columns>
        <columns>CN_Sync_Time__c</columns>
        <columns>CN_Sync_Error_Message__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <recordTypes>
        <fullName>CN_Brand</fullName>
        <active>true</active>
        <label>CN Brand</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>